asset table overlap bugfix (#6272)

--- a/src/sass/app/resources.scss
+++ b/src/sass/app/resources.scss
@@ -28,6 +28,9 @@
     .ui-tabs-anchor:focus {
         outline: none;
     }
+    .ui-tabs-nav li {
+        margin-top: 5px;
+    }
 }
 
 #asset_index_wrapper {
